creation branche travail

--- a/menu1.html
+++ b/menu1.html
@@ -112,16 +112,25 @@
 			<section>
 				<div>
 					<h3 class="h3menu1">
-					<img class="h3menu1__hrg" src="logos/hr_gauche.png"><span class="h3menu1__underline">Mouvement final</span>
-				<img class="h3menu1__hrd" src="logos/hr_droite.png">
-			</h3>
+						<img class="h3menu1__hrg" src="logos/hr_gauche.png"><span class="h3menu1__underline">Mouvement final</span>
+						<img class="h3menu1__hrd" src="logos/hr_droite.png">
+					</h3>
 					<div  class="blocmenu1">
-						<ul class="ulmenu1"> 
-							<li>
-								<p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
-								<p>Baba au rhum revisité avec son coulis de citron</p>
-								<p>Tarte au citron meringué destructuré</p>
-							</li>
+						<div class="blocmenu1__plat">
+							<div class="plat--texte">
+							Macaron noisette et chocolat, glace au caramel brun et sel de Guérande
+							</div>
+						</div>
+						<div class="blocmenu1__plat">
+							<div class="plat--texte">
+								Baba au rhum revisité avec son coulis de citron
+							</div>
+						</div>
+						<div class="blocmenu1__plat">
+							<div class="plat--texte">
+								Tarte au citron meringué destructuré
+							</div>
+						</div> 
 					</div>
 				</div>
 			</section>
@@ -135,7 +144,7 @@
 		</main>
 		<footer>
 			<p class="btn">
-				<a class="mention" href="mentionslegales.html" target="_blank">Mentions légales</a>
+				<a class="mention" href="mentions.html" target="_blank">Mentions légales</a>
 			</p>
 			<p class="btn">
 				<a class="contact" href="mailto:ohmyfood@omf.com">Contactez-nous</a>
