--- a/menu2.html
+++ b/menu2.html
@@ -24,8 +24,8 @@
 			<section>
 				<div class="color1">
 					<h3 class="h3menu2">
-						<img class="h3menu2__hr" src="logos/hr_menu2.png"> 		<span class="h3menu2__underline">Pour se mettre en appétit</span>
-						<img class="h3menu2__hr hr--reverse" src="logos/hr_menu2.png">
+						<img class="h3menu2__hr hr--orange" src="logos/hr_menu2.png"> 		<span class="h3menu2__underline">Pour se mettre en appétit</span>
+						<img class="h3menu2__hr hr--orange hr--reverse" src="logos/hr_menu2.png">
 					</h3>
 					<div  class="blocmenu2">
 						<div class="blocmenu2__plat">
@@ -50,9 +50,9 @@
 			<section>
 				<div class="color2">
 					<h3 class="h3menu2">
-						<img class="h3menu2__hr hr--purple" src="logos/hr_menu2.png">		
+						<img class="h3menu2__hr  hr--purple" src="logos/hr_menu2.png">		
 						<span class="h3menu2__underline">Plaisir des papilles</span>
-						<img class="h3menu2__hr hr--reverse" src="logos/hr_menu2.png">
+						<img class="h3menu2__hr hr--purple hr--reverse" src="logos/hr_menu2.png">
 					</h3>
 					<div  class="blocmenu2">
 						<div class="blocmenu2__plat">
@@ -79,7 +79,7 @@
 					<h3 class="h3menu2">
 						<img class="h3menu2__hr hr--blue" src="logos/hr_menu2.png">   	
 						<span class="h3menu2__underline">Gourmandises sucrées</span>
-						<img class="h3menu2__hr hr--reverse" src="logos/hr_menu2.png">
+						<img class="h3menu2__hr hr--blue hr--reverse" src="logos/hr_menu2.png">
 					</h3>
 					<div  class="blocmenu2">
 						<ul class="ulmenu2"> 
@@ -94,7 +94,7 @@
 		</main>
 		<footer>
 			<p class="btn">
-				<a class="mention" href="mentionslegales.html" target="_blank">Mentions légales</a>
+				<a class="mention" href="mentions.html" target="_blank">Mentions légales</a>
 			</p>
 			<p class="btn">
 				<a class="contact" href="mailto:ohmyfood@omf.com">Contactez-nous</a>
