--- a/menu3.html
+++ b/menu3.html
@@ -27,29 +27,17 @@
 						<img class="h3menu3__reverse" src="logos/hr1_menu3.png">
 					</h3>
 					<div  class="blocmenu3">
-						<div>
-							<ul class="ulmenu3"> 
-								<li>
-									<p>Tartare de thon au yuzu</p>
-									<p>Bouchée de homard crousitllant et sa farandole de petits légumes</p>
-									<p>Velouté de cèpes aux truffes</p>
-								</li>
-							</ul>
+						<div class="blocmenu3__plat">
+							<div class="plat--texte">Poulet rôti aux herbes de provence et sa crème de truffe</div>
+							<div class="plat--prix">110€</div>
 						</div>
-						<div>
-							<ul class="ulmenu3">
-								<li class="prix">
-									<p>
-										55€
-									</p>
-									<p>
-										89€
-									</p>
-									<p>
-										56€
-									</p>
-								</li>
-							</ul>
+						<div class="blocmenu3__plat">
+							<div class="plat--texte">Langouste rôtie et ses légumes de saison</div>
+							<div class="plat--prix">225€</div>
+						</div>
+						<div class="blocmenu3__plat">
+							<div class="plat--texte">Côte de boeuf angus et sa purée de panais</div>
+							<div class="plat--prix">115€</div>
 						</div>
 					</div>
 				</div>
@@ -67,39 +55,16 @@
 							Poulet rôti aux herbes de provence et sa crème de truffe
 							</div>
 							<div class="plat--prix">
-							79€
+							110€
 							</div>
 						</div>
 						<div class="blocmenu3__plat">
 							<div class="plat--texte">Langouste rôtie et ses légumes de saison</div>
-							<div class="plat--prix">57€</div>
+							<div class="plat--prix">225€</div>
 						</div>
 						<div class="blocmenu3__plat">
 							<div class="plat--texte">Côte de boeuf angus et sa purée de panais</div>
-							<div class="plat--prix">57€</div>
-						</div>
-							<ul class="ulmenu3"> 
-								<li>
-									<p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
-									<p>Langouste rôtie et ses légumes de saison</p>
-									<p>Côte de boeuf angus et sa purée de panais</p>
-								</li>
-							</ul>
-						</div>
-						<div>
-							<ul class="ulmenu3">
-								<li class="prix">
-									<p>
-										110€
-									</p>
-									<p>
-										225€
-									</p>
-									<p>
-										115€
-									</p>
-								</li>
-							</ul>
+							<div class="plat--prix">115€</div>
 						</div>
 					</div>
 				</div>
@@ -112,29 +77,22 @@
 						<img class="h3menu3__reverse" src="logos/hr3_menu3.png">
 						</h3>
 					<div  class="blocmenu3">
-						<div>
-							<ul class="ulmenu3"> 
-								<li>
-									<p>Farandole de desserts du chef</p>
-									<p>Crème brûlée revisitée</p>
-									<p>Tiramisu à la noisette</p>
-								</li>
-							</ul>
-						</div>
-						<div>
-							<ul class="ulmenu3">
-								<li class="prix">
-									<p>
-										55€
-									</p>
-									<p>
-										60€
-									</p>
-									<p>
-										55€
-									</p>
-								</li>
-							</ul>
+						<div class="blocmenu3__plat">
+							<div class="plat--texte">
+								Farandole de desserts du chef
+								</div>
+								<div class="plat--prix">
+								55€
+								</div>
+							</div>
+							<div class="blocmenu3__plat">
+								<div class="plat--texte">Crème brûlée revisitée</div>
+								<div class="plat--prix">60€</div>
+							</div>
+							<div class="blocmenu3__plat">
+								<div class="plat--texte">Tiramisu à la noisette</div>
+								<div class="plat--prix">55€</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -142,7 +100,7 @@
 		</main>
 		<footer>
 			<p class="btn">
-				<a class="mention" href="mentionslegales.html" target="_blank">Mentions légales</a>
+				<a class="mention" href="mentions.html" target="_blank">Mentions légales</a>
 			</p>
 			<p class="btn">
 				<a class="contact" href="mailto:ohmyfood@omf.com">Contactez-nous</a>
