--- a/menu4.html
+++ b/menu4.html
@@ -27,30 +27,23 @@
 						<img class="h3menu4__reverse" src="logos/hr_menu4.png">
 					</h3>
 					<div  class="blocmenu4">
-						<div>
-							<ul class="ulmenu4"> 
-								<li>
-									<p>Fricassée d'escargot au piment d'espelette</p>
-									<p>Oeuf au plat assaisonné à la truffe sur lit de caviar</p>
-									<p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
-								</li>
-							</ul>
+						<div class="blocmenu4__plat">
+							<div class="plat--texte">
+							Fricassée d'escargot au piment d'espelette
+							</div>
+							<div class="plat--prix">
+							60€
+							</div>
 						</div>
-						<div>
-							<ul class="ulmenu4">
-								<li class="prix">
-									<p>
-										60€
-									</p>
-									<p>
-										55€
-									</p>
-									<p>
-										65€
-									</p>
-								</li>
-							</ul>
+						<div class="blocmenu4__plat">
+							<div class="plat--texte">Oeuf au plat assaisonné à la truffe sur lit de caviar</div>
+							<div class="plat--prix">55€</div>
 						</div>
+						<div class="blocmenu4__plat">
+							<div class="plat--texte">Foie gras de canard mi-cuit et ses copeaux de truffe noire</div>
+							<div class="plat--prix">65€</div>
+						</div>
+						
 					</div>
 				</div>
 			</section>
@@ -62,30 +55,23 @@
 						<img class="h3menu4__reverse" src="logos/hr_menu4.png">
 					</h3>
 					<div  class="blocmenu4">
-						<div>
-							<ul class="ulmenu4"> 
-								<li>
-									<p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
-									<p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p>
-									<p>Filet de Turbot aux agrumes</p>
-								</li>
-							</ul>
+						<div class="blocmenu4__plat">
+							<div class="plat--texte">
+							Filet de boeuf aux herbes accompagné de sa ribambelle de légumes
+							</div>
+							<div class="plat--prix">
+							70€
+							</div>
 						</div>
-						<div>
-							<ul class="ulmenu4">
-								<li class="prix">
-									<p>
-										70€
-									</p>
-									<p>
-										85€
-									</p>
-									<p>
-										125€
-									</p>
-								</li>
-							</ul>
+						<div class="blocmenu4__plat">
+							<div class="plat--texte">Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</div>
+							<div class="plat--prix">85€</div>
 						</div>
+						<div class="blocmenu4__plat">
+							<div class="plat--texte">Filet de Turbot aux agrumes</div>
+							<div class="plat--prix">125€</div>
+						</div>
+						
 					</div>
 				</div>
 			</section>
@@ -97,29 +83,21 @@
 						<img class="h3menu4__reverse" src="logos/hr_menu4.png">
 					</h3>
 					<div  class="blocmenu4">
-						<div>
-							<ul class="ulmenu4"> 
-								<li>
-									<p>Paris-Brest revisité</p>
-									<p>Macaron au chocolat d'exception et glace à la vanille de Madagascar</p>
-									<p>Mousse au chocolat au piment d'espelette et à la truffe noire</p>
-								</li>
-							</ul>
+						<div class="blocmenu4__plat">
+							<div class="plat--texte">
+							Paris-Brest revisité
+							</div>
+							<div class="plat--prix">
+							55€
+							</div>
 						</div>
-						<div>
-							<ul class="ulmenu4">
-								<li class="prix">
-									<p>
-										55€
-									</p>
-									<p>
-										65€
-									</p>
-									<p>
-										60€
-									</p>
-								</li>
-							</ul>
+						<div class="blocmenu4__plat">
+							<div class="plat--texte">Macaron au chocolat d'exception et glace à la vanille de Madagascar</div>
+							<div class="plat--prix">65€</div>
+						</div>
+						<div class="blocmenu4__plat">
+							<div class="plat--texte">Mousse au chocolat au piment d'espelette et à la truffe noire</div>
+							<div class="plat--prix">60€</div>
 						</div>
 					</div>
 				</div>
@@ -127,7 +105,7 @@
 		</main>
 		<footer>
 			<p class="btn">
-				<a class="mention" href="mentionslegales.html" target="_blank">Mentions légales</a>
+				<a class="mention" href="mentions.html" target="_blank">Mentions légales</a>
 			</p>
 			<p class="btn">
 				<a class="contact" href="mailto:ohmyfood@omf.com">Contactez-nous</a>
