--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="fr">
-
 	<head>
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
@@ -8,24 +7,36 @@
 		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="css/stylesheet.css" />
 	</head>
-
 	<body>
 		<header>
-			<a href=index.html>
-				<h1>ohmyfood</h1>
-			</a>
+			<a href=index.html><h1>ohmyfood</h1></a>
 		</header>
 		<main>
 			<section class="presentationmenu">
 				<div class="presentationmenu__miniature">
 					<div>
-						
 						<div class="presentationmenu--menu1">
 							<a class="menu1" href="menu1.html">
 								<div  class="zoom">
 									<i class="fab fa-itunes-note"></i>
-									<p>La note enchantée</p>
-									<p>MENU</p>
+									<p>
+										La note enchantée
+									</p>
+									<h2>
+										MENU
+									</h2>
+								</div>
+							</a>
+						</div>
+						<div class="presentationmenu--menu2">
+							<a class="menu2" href="menu2.html">
+								<div class="zoom">
+									<p class="degrademenu2">
+										Le chic à la française
+									</p>
+									<p>
+										Menu
+									</p>
 								</div>
 							</a>
 						</div>
@@ -38,16 +49,6 @@
 									<p>
 										Menu
 									</p>
-								</div>
-							</a>
-						</div>
-					</div>
-					<div>
-						<div class="presentationmenu--menu2">
-							<a class="menu2" href="menu2.html">
-								<div class="zoom">
-									<p class="degrademenu2">Le chic à la française</p>
-									<p>Menu</p>
 								</div>
 							</a>
 						</div>
@@ -68,7 +69,10 @@
 			</section>
 			<section>
 				<div class="avenir">
-					<p>Prochainement<span class="dots">..</span></p>
+					<h3>
+						Prochainement
+						<span class="dots">..</span>
+					</h3>
 				</div>
 			</section>
 		</main>
@@ -82,3 +86,4 @@
 		</footer>
 	</body>
 </html>
+
