--- a/menu2.html
+++ b/menu2.html
@@ -1,48 +1,51 @@
 <!doctype html>
 <html lang="fr">
-
 	<head>
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
 		<link rel="stylesheet" href="css/stylesheet_menu2.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
-		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>  
+		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
 	</head>
-
 	<body>
 		<header>
-			<a href=index.html>
-				<h1>ohmyfood</h1>
-			</a>
+			<a href=index.html><h1>ohmyfood</h1></a>
 		</header>
 		<main id="menu2">
 			<section>
-				<h2 id="h2menu2">
-					Le chic à la française					
-					</h2>
+				<h2 id="h2menu2">Le chic à la française</h2>
 			</section>
 			<section>
 				<div class="color1">
 					<h3 class="h3menu2">
-						<img class="h3menu2__hr hr--orange" src="logos/hr_menu2.png"> 		<span class="h3menu2__underline">Pour se mettre en appétit</span>
+						<img class="h3menu2__hr hr--orange" src="logos/hr_menu2.png">
+						<span class="h3menu2__underline">Pour se mettre en appétit</span>
 						<img class="h3menu2__hr hr--orange hr--reverse" src="logos/hr_menu2.png">
 					</h3>
 					<div  class="blocmenu2">
 						<div class="blocmenu2__plat">
 							<div class="plat--texte">
-							Ravioles de foie gras accompagnés de leur crème à la truffe
+								Ravioles de foie gras accompagnés de leur crème à la truffe
 							</div>
 							<div class="plat--prix">
-							79€
+								79€
 							</div>
 						</div>
 						<div class="blocmenu2__plat">
-							<div class="plat--texte">Velouté de légumes d'antan</div>
-							<div class="plat--prix">57€</div>
+							<div class="plat--texte">
+								Velouté de légumes d'antan
+							</div>
+							<div class="plat--prix">
+								57€
+							</div>
 						</div>
 						<div class="blocmenu2__plat">
-							<div class="plat--texte">Soupe à l'oignon revisitée</div>
-							<div class="plat--prix">57€</div>
+							<div class="plat--texte">
+								Soupe à l'oignon revisitée
+							</div>
+							<div class="plat--prix">
+								57€
+							</div>
 						</div>
 					</div>
 				</div>
@@ -50,26 +53,34 @@
 			<section>
 				<div class="color2">
 					<h3 class="h3menu2">
-						<img class="h3menu2__hr  hr--purple" src="logos/hr_menu2.png">		
+						<img class="h3menu2__hr  hr--purple" src="logos/hr_menu2.png">
 						<span class="h3menu2__underline">Plaisir des papilles</span>
 						<img class="h3menu2__hr hr--purple hr--reverse" src="logos/hr_menu2.png">
 					</h3>
 					<div  class="blocmenu2">
 						<div class="blocmenu2__plat">
 							<div class="plat--texte">
-							Coquilles Saint-Jacques accompagnée d'une purée de panais
+								Coquilles Saint-Jacques accompagnée d'une purée de panais
 							</div>
 							<div class="plat--prix">
-							95€
+								95€
 							</div>
 						</div>
 						<div class="blocmenu2__plat">
-							<div class="plat--texte">Magret de canard et parmentier de pommes de terres</div>
-							<div class="plat--prix">88€</div>
+							<div class="plat--texte">
+								Magret de canard et parmentier de pommes de terres
+							</div>
+							<div class="plat--prix">
+								88€
+							</div>
 						</div>
 						<div class="blocmenu2__plat">
-							<div class="plat--texte">Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</div>
-							<div class="plat--prix">175€</div>
+							<div class="plat--texte">
+								Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes
+							</div>
+							<div class="plat--prix">
+								175€
+							</div>
 						</div>
 					</div>
 				</div>
@@ -77,20 +88,23 @@
 			<section>
 				<div class="color3">
 					<h3 class="h3menu2">
-						<img class="h3menu2__hr hr--blue" src="logos/hr_menu2.png">   	
+						<img class="h3menu2__hr hr--blue" src="logos/hr_menu2.png">
 						<span class="h3menu2__underline">Gourmandises sucrées</span>
 						<img class="h3menu2__hr hr--blue hr--reverse" src="logos/hr_menu2.png">
 					</h3>
 					<div  class="blocmenu2">
-						<ul class="ulmenu2"> 
-							<li>
-								<p>Pétales de violettes glacées et purée de noisettes</p>
-								<p>Fondant au chocolat revisité</p>
-								<p>Millefeuille croustillant</p>
-							</li>
+						<div class="blocmenu2__plat">
+							<div class="plat--texte">
+								Pétales de violettes glacées et purée de noisettes 
+								<br/>
+								Fondant au chocolat revisité
+								<br/>
+								Millefeuille croustillant
+							</div>
+						</div>
 					</div>
 				</div>
-			</section>		
+			</section>
 		</main>
 		<footer>
 			<p class="btn">
@@ -102,3 +116,4 @@
 		</footer>
 	</body>
 </html>
+
