--- a/menu3.html
+++ b/menu3.html
@@ -1,19 +1,15 @@
 <!doctype html>
 <html lang="fr">
-
 	<head>
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
 		<link rel="stylesheet" href="css/stylesheet_menu3.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
-		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>  
+		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
 	</head>
-
 	<body>
 		<header>
-			<a href=index.html>
-				<h1>ohmyfood</h1>
-			</a>
+			<a href=index.html><h1>ohmyfood</h1></a>
 		</header>
 		<main id="menu3">
 			<section>
@@ -23,21 +19,33 @@
 				<div>
 					<h3 class="h3menu3">
 						<img src="logos/hr1_menu3.png">
-							<span class="h3menu3__underline">Pour bien commencer</span>
+						<span class="h3menu3__underline">Pour bien commencer</span>
 						<img class="h3menu3__reverse" src="logos/hr1_menu3.png">
 					</h3>
 					<div  class="blocmenu3">
 						<div class="blocmenu3__plat">
-							<div class="plat--texte">Poulet rôti aux herbes de provence et sa crème de truffe</div>
-							<div class="plat--prix">110€</div>
+							<div class="plat--texte">
+								Poulet rôti aux herbes de provence et sa crème de truffe
+							</div>
+							<div class="plat--prix">
+								110€
+							</div>
 						</div>
 						<div class="blocmenu3__plat">
-							<div class="plat--texte">Langouste rôtie et ses légumes de saison</div>
-							<div class="plat--prix">225€</div>
+							<div class="plat--texte">
+								Langouste rôtie et ses légumes de saison
+							</div>
+							<div class="plat--prix">
+								225€
+							</div>
 						</div>
 						<div class="blocmenu3__plat">
-							<div class="plat--texte">Côte de boeuf angus et sa purée de panais</div>
-							<div class="plat--prix">115€</div>
+							<div class="plat--texte">
+								Côte de boeuf angus et sa purée de panais
+							</div>
+							<div class="plat--prix">
+								115€
+							</div>
 						</div>
 					</div>
 				</div>
@@ -46,25 +54,33 @@
 				<div>
 					<h3 class="h3menu3">
 						<img src="logos/hr2_menu3.png">
-							<span class="h3menu3__underline">Pour bien continuer</span>
+						<span class="h3menu3__underline">Pour bien continuer</span>
 						<img class="h3menu3__reverse" src="logos/hr2_menu3.png">
 					</h3>
 					<div  class="blocmenu3">
 						<div class="blocmenu3__plat">
 							<div class="plat--texte">
-							Poulet rôti aux herbes de provence et sa crème de truffe
+								Poulet rôti aux herbes de provence et sa crème de truffe
 							</div>
 							<div class="plat--prix">
-							110€
+								110€
 							</div>
 						</div>
 						<div class="blocmenu3__plat">
-							<div class="plat--texte">Langouste rôtie et ses légumes de saison</div>
-							<div class="plat--prix">225€</div>
+							<div class="plat--texte">
+								Langouste rôtie et ses légumes de saison
+							</div>
+							<div class="plat--prix">
+								225€
+							</div>
 						</div>
 						<div class="blocmenu3__plat">
-							<div class="plat--texte">Côte de boeuf angus et sa purée de panais</div>
-							<div class="plat--prix">115€</div>
+							<div class="plat--texte">
+								Côte de boeuf angus et sa purée de panais
+							</div>
+							<div class="plat--prix">
+								115€
+							</div>
 						</div>
 					</div>
 				</div>
@@ -73,38 +89,47 @@
 				<div>
 					<h3 class="h3menu3">
 						<img src="logos/hr3_menu3.png">
-							<span class="h3menu3__underline">Pour bien terminer</span>
+						<span class="h3menu3__underline">Pour bien terminer</span>
 						<img class="h3menu3__reverse" src="logos/hr3_menu3.png">
-						</h3>
+					</h3>
 					<div  class="blocmenu3">
 						<div class="blocmenu3__plat">
 							<div class="plat--texte">
 								Farandole de desserts du chef
-								</div>
-								<div class="plat--prix">
+							</div>
+							<div class="plat--prix">
 								55€
-								</div>
 							</div>
-							<div class="blocmenu3__plat">
-								<div class="plat--texte">Crème brûlée revisitée</div>
-								<div class="plat--prix">60€</div>
+						</div>
+						<div class="blocmenu3__plat">
+							<div class="plat--texte">
+								Crème brûlée revisitée
 							</div>
-							<div class="blocmenu3__plat">
-								<div class="plat--texte">Tiramisu à la noisette</div>
-								<div class="plat--prix">55€</div>
+							<div class="plat--prix">
+								60€
+							</div>
+						</div>
+						<div class="blocmenu3__plat">
+							<div class="plat--texte">
+								Tiramisu à la noisette
+							</div>
+							<div class="plat--prix">
+								55€
 							</div>
 						</div>
 					</div>
 				</div>
-			</section>		
-		</main>
-		<footer>
-			<p class="btn">
-				<a class="mention" href="mentions.html" target="_blank">Mentions légales</a>
-			</p>
-			<p class="btn">
-				<a class="contact" href="mailto:ohmyfood@omf.com">Contactez-nous</a>
-			</p>
-		</footer>
-	</body>
+			</div>
+		</section>
+	</main>
+	<footer>
+		<p class="btn">
+			<a class="mention" href="mentions.html" target="_blank">Mentions légales</a>
+		</p>
+		<p class="btn">
+			<a class="contact" href="mailto:ohmyfood@omf.com">Contactez-nous</a>
+		</p>
+	</footer>
+</body>
 </html>
+
