--- a/menu4.html
+++ b/menu4.html
@@ -1,19 +1,15 @@
 <!doctype html>
 <html lang="fr">
-
 	<head>
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
 		<link rel="stylesheet" href="css/stylesheet_menu4.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
-		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>  
+		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
 	</head>
-
 	<body>
 		<header>
-			<a href=index.html>
-				<h1>ohmyfood</h1>
-			</a>
+			<a href=index.html><h1>ohmyfood</h1></a>
 		</header>
 		<main id="menu4">
 			<section>
@@ -23,27 +19,34 @@
 				<div>
 					<h3 class="h3menu4">
 						<img src="logos/hr_menu4.png">
-							   <span class="h3menu4__underline">Esquisse</span>   
+						<span class="h3menu4__underline">Esquisse</span>
 						<img class="h3menu4__reverse" src="logos/hr_menu4.png">
 					</h3>
 					<div  class="blocmenu4">
 						<div class="blocmenu4__plat">
 							<div class="plat--texte">
-							Fricassée d'escargot au piment d'espelette
+								Fricassée d'escargot au piment d'espelette
 							</div>
 							<div class="plat--prix">
-							60€
+								60€
 							</div>
 						</div>
 						<div class="blocmenu4__plat">
-							<div class="plat--texte">Oeuf au plat assaisonné à la truffe sur lit de caviar</div>
-							<div class="plat--prix">55€</div>
+							<div class="plat--texte">
+								Oeuf au plat assaisonné à la truffe sur lit de caviar
+							</div>
+							<div class="plat--prix">
+								55€
+							</div>
 						</div>
 						<div class="blocmenu4__plat">
-							<div class="plat--texte">Foie gras de canard mi-cuit et ses copeaux de truffe noire</div>
-							<div class="plat--prix">65€</div>
+							<div class="plat--texte">
+								Foie gras de canard mi-cuit et ses copeaux de truffe noire
+							</div>
+							<div class="plat--prix">
+								65€
+							</div>
 						</div>
-						
 					</div>
 				</div>
 			</section>
@@ -51,27 +54,34 @@
 				<div>
 					<h3 class="h3menu4">
 						<img src="logos/hr_menu4.png">
-							<span class="h3menu4__underline">Oeuvre de maître</span>
+						<span class="h3menu4__underline">Oeuvre de maître</span>
 						<img class="h3menu4__reverse" src="logos/hr_menu4.png">
 					</h3>
 					<div  class="blocmenu4">
 						<div class="blocmenu4__plat">
 							<div class="plat--texte">
-							Filet de boeuf aux herbes accompagné de sa ribambelle de légumes
+								Filet de boeuf aux herbes accompagné de sa ribambelle de légumes
 							</div>
 							<div class="plat--prix">
-							70€
+								70€
 							</div>
 						</div>
 						<div class="blocmenu4__plat">
-							<div class="plat--texte">Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</div>
-							<div class="plat--prix">85€</div>
+							<div class="plat--texte">
+								Parmentier de queue de boeuf à la truffe noire sur sa purée de panais
+							</div>
+							<div class="plat--prix">
+								85€
+							</div>
 						</div>
 						<div class="blocmenu4__plat">
-							<div class="plat--texte">Filet de Turbot aux agrumes</div>
-							<div class="plat--prix">125€</div>
+							<div class="plat--texte">
+								Filet de Turbot aux agrumes
+							</div>
+							<div class="plat--prix">
+								125€
+							</div>
 						</div>
-						
 					</div>
 				</div>
 			</section>
@@ -79,29 +89,37 @@
 				<div>
 					<h3 class="h3menu4">
 						<img src="logos/hr_menu4.png">
-							<span class="h3menu4__underline">Au sommet de l'art</span>
+						<span class="h3menu4__underline">Au sommet de l'art</span>
 						<img class="h3menu4__reverse" src="logos/hr_menu4.png">
 					</h3>
 					<div  class="blocmenu4">
 						<div class="blocmenu4__plat">
 							<div class="plat--texte">
-							Paris-Brest revisité
+								Paris-Brest revisité
 							</div>
 							<div class="plat--prix">
-							55€
+								55€
 							</div>
 						</div>
 						<div class="blocmenu4__plat">
-							<div class="plat--texte">Macaron au chocolat d'exception et glace à la vanille de Madagascar</div>
-							<div class="plat--prix">65€</div>
+							<div class="plat--texte">
+								Macaron au chocolat d'exception et glace à la vanille de Madagascar
+							</div>
+							<div class="plat--prix">
+								65€
+							</div>
 						</div>
 						<div class="blocmenu4__plat">
-							<div class="plat--texte">Mousse au chocolat au piment d'espelette et à la truffe noire</div>
-							<div class="plat--prix">60€</div>
+							<div class="plat--texte">
+								Mousse au chocolat au piment d'espelette et à la truffe noire
+							</div>
+							<div class="plat--prix">
+								60€
+							</div>
 						</div>
 					</div>
 				</div>
-			</section>		
+			</section>
 		</main>
 		<footer>
 			<p class="btn">
@@ -113,3 +131,4 @@
 		</footer>
 	</body>
 </html>
+
