--- a/menu1.html
+++ b/menu1.html
@@ -1,19 +1,15 @@
 <!doctype html>
 <html lang="fr">
-
 	<head>
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
-		<link rel="stylesheet" href="css/stylesheet_menu1.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
-		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>  
+		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="css/stylesheet_menu1.css" />
 	</head>
-
 	<body>
 		<header>
-			<a href=index.html>
-				<h1>ohmyfood</h1>
-			</a>
+			<a href=index.html><h1>ohmyfood</h1></a>
 		</header>
 		<main id="menu1">
 			<section>
@@ -22,52 +18,37 @@
 			</section>
 			<section>
 				<div>
-					<div>	
+					<div>
 						<h3 class="h3menu1">
-							<img class="h3menu1__hrg" src="logos/hr_gauche.png"> 	
+							<img class="h3menu1__hrg" src="logos/hr_gauche.png">
 							<span class="h3menu1__underline">Prélude</span>
 							<img class="h3menu1__hrd" src="logos/hr_droite.png">
-						</h3>						
+						</h3>
 					</div>
 					<div  class="blocmenu1">
-					<!--<ul class="ulmenu1"> 
-						<li>Ravioles de foie gras accompagnés de leur crème à la truffe</li>
-						<li>Caviar osciète sur blini à la farine de blé noir</li>
-						<li>Homard et espuma de potiron mariné aux zestes d'oranges</li>
-						<li>Foie gras de canard cuit entier, confiture de figue et pain toasté</li>
-					</ul>
-				</div>
-				<div>
-					<ul class="ulmenu1">
-						<li class="prix">
-								98€
-							</li >
-							<li class="prix">
-								115€
-							</li>
-							<li class="prix">
-								89€
-							</li>
-							<li class="prix">
-								105€
-							</li>
-					</ul>
-				</div>-->
 						<div class="blocmenu1__plat">
 							<div class="plat--texte">
-							Ravioles de foie gras accompagnés de leur crème à la truffe
+								Ravioles de foie gras accompagnés de leur crème à la truffe
 							</div>
 							<div class="plat--prix">
-							98€
+								98€
 							</div>
 						</div>
 						<div class="blocmenu1__plat">
-							<div class="plat--texte">Caviar osciète sur blini à la farine de blé noir</div>
-							<div class="plat--prix">115€</div>
+							<div class="plat--texte">
+								Caviar osciète sur blini à la farine de blé noir
+							</div>
+							<div class="plat--prix">
+								115€
+							</div>
 						</div>
 						<div class="blocmenu1__plat">
-							<div class="plat--texte">Homard et espuma de potiron mariné aux zestes d'oranges</div>
-							<div class="plat--prix">89€</div>
+							<div class="plat--texte">
+								Homard et espuma de potiron mariné aux zestes d'oranges
+							</div>
+							<div class="plat--prix">
+								89€
+							</div>
 						</div>
 						<div class="blocmenu1__plat">
 							<div class="plat--texte">
@@ -90,65 +71,72 @@
 					<div  class="blocmenu1">
 						<div class="blocmenu1__plat">
 							<div class="plat--texte">
-							Noix de coquilles Saint-Jacques sur lit de purée de céléri-rave
+								Noix de coquilles Saint-Jacques sur lit de purée de céléri-rave
 							</div>
 							<div class="plat--prix">
-							102€
+								102€
 							</div>
 						</div>
 						<div class="blocmenu1__plat">
-							<div class="plat--texte">Langoustine poêlée, purée de patate douce</div>
-							<div class="plat--prix">205€</div>
+							<div class="plat--texte">
+								Langoustine poêlée, purée de patate douce
+							</div>
+							<div class="plat--prix">
+								205€
+							</div>
 						</div>
-						<div class="blocmenu1__plat">
-							<div class="plat--texte">Mijoté de queue de boeuf et riz sauvage aux zests de citron</div>
-							<div class="plat--prix">169€</div>
-						</div>
-					</div>
-						
-					</div>
-				</div>
-			</section>
-			<section>
-				<div>
-					<h3 class="h3menu1">
-						<img class="h3menu1__hrg" src="logos/hr_gauche.png"><span class="h3menu1__underline">Mouvement final</span>
-						<img class="h3menu1__hrd" src="logos/hr_droite.png">
-					</h3>
-					<div  class="blocmenu1">
 						<div class="blocmenu1__plat">
 							<div class="plat--texte">
+								Mijoté de queue de boeuf et riz sauvage aux zests de citron
+							</div>
+							<div class="plat--prix">
+								169€
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div>
+				<h3 class="h3menu1">
+					<img class="h3menu1__hrg" src="logos/hr_gauche.png">
+					<span class="h3menu1__underline">Mouvement final</span>
+					<img class="h3menu1__hrd" src="logos/hr_droite.PNG">
+				</h3>
+				<div  class="blocmenu1__dessert">
+					<div class="blocmenu1__plat">
+						<div class="plat--texte">
 							Macaron noisette et chocolat, glace au caramel brun et sel de Guérande
-							</div>
 						</div>
-						<div class="blocmenu1__plat">
-							<div class="plat--texte">
-								Baba au rhum revisité avec son coulis de citron
-							</div>
+					</div>
+					<div class="blocmenu1__plat">
+						<div class="plat--texte">
+							Baba au rhum revisité avec son coulis de citron
 						</div>
-						<div class="blocmenu1__plat">
-							<div class="plat--texte">
-								Tarte au citron meringué destructuré
-							</div>
-						</div> 
+					</div>
+					<div class="blocmenu1__plat">
+						<div class="plat--texte">
+							Tarte au citron meringué destructuré
+						</div>
 					</div>
 				</div>
-			</section>
-			<section>
-				<p>
-					<h2>
-						<i class="fab fa-itunes-note"></i>La note enchantée
-					</h2>
-				</p>
-			</section>
-		</main>
-		<footer>
-			<p class="btn">
-				<a class="mention" href="mentions.html" target="_blank">Mentions légales</a>
+			</div>
+		</section>
+		<section>
+			<p>
+				<h2><i class="fab fa-itunes-note"></i>La note enchantée</h2>
 			</p>
-			<p class="btn">
-				<a class="contact" href="mailto:ohmyfood@omf.com">Contactez-nous</a>
-			</p>
-		</footer>
-	</body>
+		</section>
+	</main>
+	<footer>
+		<p class="btn">
+			<a class="mention" href="mentions.html" target="_blank">Mentions légales</a>
+		</p>
+		<p class="btn">
+			<a class="contact" href="mailto:ohmyfood@omf.com">Contactez-nous</a>
+		</p>
+	</footer>
+</body>
 </html>
+
