--- a/mentions.html
+++ b/mentions.html
@@ -3,33 +3,40 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
-		<link rel="stylesheet" href="css/stylesheet_mentions.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
+		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+		<link rel="manifest" href="favicon/site.webmanifest">
+		<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="favicon/favicon.ico">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-config" content="favicon/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
+		<link rel="stylesheet" href="css/stylesheet_mentions.css" />
 	</head>
 	<body>
 		<header>
 			<a href=index.html><h1>ohmyfood</h1></a>
 		</header>
 		<main>
-			<section>
-				<div>
-					<h2>MENTIONS LEGALES*</h2>
-				</div>
-				<h2>Identifiaction</h2>
-				<p>
-					Sur le site d'une société, on doit avoir les mentions suivantes :
-				</p>
-				<ul>
-					<li>Dénomination sociale ou raison sociale</li>
-					<li>Adresse du siège social</li>
-					<li>Numéro de téléphone et adresse de courrier électronique</li>
-					<li>Forme juridique de la société (SA, SARL, SNC, SAS, etc.)</li>
-					<li>Montant du capital social</li>
-					<li>Nom du directeur ou du codirecteur de la publication et celui du responsable de la rédaction s'il en existe</li>
-					<li>Nom, dénomination ou raison sociale et adresse et numéro de téléphone de l'hébergeur de son site</li>
-				</ul>
+			<div>
+				<h2>MENTIONS LEGALES*</h2>
 			</div>
+			<h2>Identifiaction</h2>
+			<p>
+				Sur le site d'une société, on doit avoir les mentions suivantes :
+			</p>
+			<ul>
+				<li>Dénomination sociale ou raison sociale</li>
+				<li>Adresse du siège social</li>
+				<li>Numéro de téléphone et adresse de courrier électronique</li>
+				<li>Forme juridique de la société (SA, SARL, SNC, SAS, etc.)</li>
+				<li>Montant du capital social</li>
+				<li>Nom du directeur ou du codirecteur de la publication et celui du responsable de la rédaction s'il en existe</li>
+				<li>Nom, dénomination ou raison sociale et adresse et numéro de téléphone de l'hébergeur de son site</li>
+			</ul>
 			<div>
 				<h2>Activité</h2>
 				<p>
@@ -85,6 +92,7 @@
 					<a class="footer__contact" href="mailto:ohmyfood@omf.com">Contactez-nous</a>
 				</p>
 			</footer>
-		</body>
-	</html>
+		</main>
+	</body>
+</html>
 
