--- a/menu1.html
+++ b/menu1.html
@@ -5,6 +5,15 @@
 		<title>Ohmyfood</title>
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
+		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+		<link rel="manifest" href="favicon/site.webmanifest">
+		<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="favicon/favicon.ico">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-config" content="favicon/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
 		<link rel="stylesheet" href="css/stylesheet_menu1.css" />
 	</head>
 	<body>
@@ -20,9 +29,9 @@
 				<div>
 					<div>
 						<h3 class="h3menu1">
-							<img class="h3menu1__hrg" src="logos/hr_gauche.png">
+							<img class="hrmenu1" src="logos/hr_gauche.png" alt="frise">
 							<span class="h3menu1__underline">Prélude</span>
-							<img class="h3menu1__hrd" src="logos/hr_droite.png">
+							<img class="hrmenu1" src="logos/hr_droite.png" alt="frise">
 						</h3>
 					</div>
 					<div  class="blocmenu1">
@@ -64,9 +73,9 @@
 			<section>
 				<div>
 					<h3 class="h3menu1">
-						<img class="h3menu1__hrg" src="logos/hr_gauche.png">
+						<img class="hrmenu1" src="logos/hr_gauche.png" alt="frise">
 						<span class="h3menu1__underline">Point d'orgue</span>
-						<img class="h3menu1__hrd" src="logos/hr_droite.png">
+						<img class="hrmenu1" src="logos/hr_droite.png" alt="frise">
 					</h3>
 					<div  class="blocmenu1">
 						<div class="blocmenu1__plat">
@@ -95,48 +104,45 @@
 						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-		<section>
-			<div>
-				<h3 class="h3menu1">
-					<img class="h3menu1__hrg" src="logos/hr_gauche.png">
-					<span class="h3menu1__underline">Mouvement final</span>
-					<img class="h3menu1__hrd" src="logos/hr_droite.PNG">
-				</h3>
-				<div  class="blocmenu1__dessert">
-					<div class="blocmenu1__plat">
-						<div class="plat--texte">
-							Macaron noisette et chocolat, glace au caramel brun et sel de Guérande
+			</section>
+			<section>
+				<div>
+					<h3 class="h3menu1">
+						<img class="hrmenu1" src="logos/hr_gauche.png" alt="frise">
+						<span class="h3menu1__underline">Mouvement final</span>
+						<img class="hrmenu1" src="logos/hr_droite.PNG" alt="frise">
+					</h3>
+					<div  class="blocmenu1__dessert">
+						<div class="blocmenu1__plat">
+							<div class="plat--texte">
+								Macaron noisette et chocolat, glace au caramel brun et sel de Guérande
+							</div>
 						</div>
-					</div>
-					<div class="blocmenu1__plat">
-						<div class="plat--texte">
-							Baba au rhum revisité avec son coulis de citron
+						<div class="blocmenu1__plat">
+							<div class="plat--texte">
+								Baba au rhum revisité avec son coulis de citron
+							</div>
 						</div>
-					</div>
-					<div class="blocmenu1__plat">
-						<div class="plat--texte">
-							Tarte au citron meringué destructuré
+						<div class="blocmenu1__plat">
+							<div class="plat--texte">
+								Tarte au citron meringué destructuré
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-		<section>
-			<p>
+			</section>
+			<section>
 				<h2><i class="fab fa-itunes-note"></i>La note enchantée</h2>
+			</section>
+		</main>
+		<footer>
+			<p class="btn">
+				<a class="mention" href="mentions.html" target="_blank">Mentions légales</a>
 			</p>
-		</section>
-	</main>
-	<footer>
-		<p class="btn">
-			<a class="mention" href="mentions.html" target="_blank">Mentions légales</a>
-		</p>
-		<p class="btn">
-			<a class="contact" href="mailto:ohmyfood@omf.com">Contactez-nous</a>
-		</p>
-	</footer>
-</body>
+			<p class="btn">
+				<a class="contact" href="mailto:ohmyfood@omf.com">Contactez-nous</a>
+			</p>
+		</footer>
+	</body>
 </html>
 
