--- a/menu3.html
+++ b/menu3.html
@@ -3,9 +3,18 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
-		<link rel="stylesheet" href="css/stylesheet_menu3.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
+		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+		<link rel="manifest" href="favicon/site.webmanifest">
+		<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="favicon/favicon.ico">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-config" content="favicon/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
+		<link rel="stylesheet" href="css/stylesheet_menu3.css" />
 	</head>
 	<body>
 		<header>
@@ -18,9 +27,9 @@
 			<section>
 				<div>
 					<h3 class="h3menu3">
-						<img src="logos/hr1_menu3.png">
+						<img class="hrmenu3" src="logos/hr1_menu3.png" alt="frise">
 						<span class="h3menu3__underline">Pour bien commencer</span>
-						<img class="h3menu3__reverse" src="logos/hr1_menu3.png">
+						<img class="hrmenu3__reverse" src="logos/hr1_menu3.png" alt="frise">
 					</h3>
 					<div  class="blocmenu3">
 						<div class="blocmenu3__plat">
@@ -53,9 +62,9 @@
 			<section>
 				<div>
 					<h3 class="h3menu3">
-						<img src="logos/hr2_menu3.png">
+						<img class="hrmenu3" src="logos/hr2_menu3.png" alt="frise">
 						<span class="h3menu3__underline">Pour bien continuer</span>
-						<img class="h3menu3__reverse" src="logos/hr2_menu3.png">
+						<img class="hrmenu3__reverse" src="logos/hr2_menu3.png" alt="frise">
 					</h3>
 					<div  class="blocmenu3">
 						<div class="blocmenu3__plat">
@@ -88,9 +97,9 @@
 			<section>
 				<div>
 					<h3 class="h3menu3">
-						<img src="logos/hr3_menu3.png">
+						<img class="hrmenu3" src="logos/hr3_menu3.png" alt="frise">
 						<span class="h3menu3__underline">Pour bien terminer</span>
-						<img class="h3menu3__reverse" src="logos/hr3_menu3.png">
+						<img class="hrmenu3__reverse" src="logos/hr3_menu3.png" alt="frise">
 					</h3>
 					<div  class="blocmenu3">
 						<div class="blocmenu3__plat">
@@ -119,17 +128,16 @@
 						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-	</main>
-	<footer>
-		<p class="btn">
-			<a class="mention" href="mentions.html" target="_blank">Mentions légales</a>
-		</p>
-		<p class="btn">
-			<a class="contact" href="mailto:ohmyfood@omf.com">Contactez-nous</a>
-		</p>
-	</footer>
-</body>
+			</section>
+		</main>
+		<footer>
+			<p class="btn">
+				<a class="mention" href="mentions.html" target="_blank">Mentions légales</a>
+			</p>
+			<p class="btn">
+				<a class="contact" href="mailto:ohmyfood@omf.com">Contactez-nous</a>
+			</p>
+		</footer>
+	</body>
 </html>
 
