--- a/menu4.html
+++ b/menu4.html
@@ -3,9 +3,18 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
-		<link rel="stylesheet" href="css/stylesheet_menu4.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
+		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+		<link rel="manifest" href="favicon/site.webmanifest">
+		<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="favicon/favicon.ico">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-config" content="favicon/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
+		<link rel="stylesheet" href="css/stylesheet_menu4.css" />
 	</head>
 	<body>
 		<header>
@@ -18,9 +27,9 @@
 			<section>
 				<div>
 					<h3 class="h3menu4">
-						<img src="logos/hr_menu4.png">
+						<img class="hrmenu4" src="logos/hr_menu4.png" alt="frise">
 						<span class="h3menu4__underline">Esquisse</span>
-						<img class="h3menu4__reverse" src="logos/hr_menu4.png">
+						<img class="hrmenu4__reverse" src="logos/hr_menu4.png" alt="frise">
 					</h3>
 					<div  class="blocmenu4">
 						<div class="blocmenu4__plat">
@@ -53,9 +62,9 @@
 			<section>
 				<div>
 					<h3 class="h3menu4">
-						<img src="logos/hr_menu4.png">
+						<img class="hrmenu4" src="logos/hr_menu4.png" alt="frise">
 						<span class="h3menu4__underline">Oeuvre de maître</span>
-						<img class="h3menu4__reverse" src="logos/hr_menu4.png">
+						<img class="hrmenu4__reverse" src="logos/hr_menu4.png" alt="frise">
 					</h3>
 					<div  class="blocmenu4">
 						<div class="blocmenu4__plat">
@@ -88,9 +97,9 @@
 			<section>
 				<div>
 					<h3 class="h3menu4">
-						<img src="logos/hr_menu4.png">
+						<img class="hrmenu4" src="logos/hr_menu4.png" alt="frise">
 						<span class="h3menu4__underline">Au sommet de l'art</span>
-						<img class="h3menu4__reverse" src="logos/hr_menu4.png">
+						<img class="hrmenu4__reverse" src="logos/hr_menu4.png" alt="frise">
 					</h3>
 					<div  class="blocmenu4">
 						<div class="blocmenu4__plat">
