--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 		<title>Ohmyfood</title>
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
+		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+		<link rel="manifest" href="favicon/site.webmanifest">
+		<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="favicon/favicon.ico">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-config" content="favicon/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
 		<link rel="stylesheet" href="css/stylesheet.css" />
 	</head>
 	<body>
@@ -14,65 +23,58 @@
 		<main>
 			<section class="presentationmenu">
 				<div class="presentationmenu__miniature">
-					<div>
-						<div class="presentationmenu--menu1">
-							<a class="menu1" href="menu1.html">
-								<div  class="zoom">
-									<i class="fab fa-itunes-note"></i>
-									<p>
-										La note enchantée
-									</p>
-									<h2>
-										MENU
-									</h2>
-								</div>
-							</a>
-						</div>
-						<div class="presentationmenu--menu2">
-							<a class="menu2" href="menu2.html">
-								<div class="zoom">
-									<p class="degrademenu2">
-										Le chic à la française
-									</p>
-									<p>
-										Menu
-									</p>
-								</div>
-							</a>
-						</div>
-						<div class="presentationmenu--menu3">
-							<a class="menu3" href="menu3.html">
-								<div class="zoom">
-									<p class="degrademenu3">
-										Le délice des papilles
-									</p>
-									<p>
-										Menu
-									</p>
-								</div>
-							</a>
-						</div>
-						<div class="presentationmenu--menu4">
-							<a class="menu4" href="menu4.html">
-								<div class="zoom">
-									<p class="degrademenu4">
-										La palette du goût
-									</p>
-									<p>
-										Menu
-									</p>
-								</div>
-							</a>
-						</div>
+					<div class="presentationmenu--menu1">
+						<a class="menu1" href="menu1.html">
+							<div  class="zoom">
+								<i class="fab fa-itunes-note"></i>
+								<p>
+									La note enchantée
+								</p>
+								<h2>MENU</h2>
+							</div>
+						</a>
+					</div>
+					<div class="presentationmenu--menu2">
+						<a class="menu2" href="menu2.html">
+							<div class="zoom">
+								<p class="degrademenu2">
+									Le chic à la française
+								</p>
+								<p>
+									Menu
+								</p>
+							</div>
+						</a>
+					</div>
+					<div class="presentationmenu--menu3">
+						<a class="menu3" href="menu3.html">
+							<div class="zoom">
+								<p class="degrademenu3">
+									Le délice des papilles
+								</p>
+								<p>
+									Menu
+								</p>
+							</div>
+						</a>
+					</div>
+					<div class="presentationmenu--menu4">
+						<a class="menu4" href="menu4.html">
+							<div class="zoom">
+								<p class="degrademenu4">
+									La palette du goût
+								</p>
+								<p>
+									Menu
+								</p>
+							</div>
+						</a>
 					</div>
 				</div>
 			</section>
 			<section>
 				<div class="avenir">
-					<h3>
-						Prochainement
-						<span class="dots">..</span>
-					</h3>
+					<h3>Prochainement<span class="dots">..</span></h3>
 				</div>
 			</section>
 		</main>
