--- a/menu2.html
+++ b/menu2.html
@@ -3,9 +3,18 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Ohmyfood</title>
-		<link rel="stylesheet" href="css/stylesheet_menu2.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
+		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+		<link rel="manifest" href="favicon/site.webmanifest">
+		<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="favicon/favicon.ico">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-config" content="favicon/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
 		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="css/stylesheet_menu2.css" />
 	</head>
 	<body>
 		<header>
@@ -18,9 +27,9 @@
 			<section>
 				<div class="color1">
 					<h3 class="h3menu2">
-						<img class="h3menu2__hr hr--orange" src="logos/hr_menu2.png">
+						<img class="h3menu2__hr hr--orange" src="logos/hr_menu2.png" alt="frise">
 						<span class="h3menu2__underline">Pour se mettre en appétit</span>
-						<img class="h3menu2__hr hr--orange hr--reverse" src="logos/hr_menu2.png">
+						<img class="h3menu2__hr hr--orange hr--reverse" src="logos/hr_menu2.png" alt="frise">
 					</h3>
 					<div  class="blocmenu2">
 						<div class="blocmenu2__plat">
@@ -53,9 +62,9 @@
 			<section>
 				<div class="color2">
 					<h3 class="h3menu2">
-						<img class="h3menu2__hr  hr--purple" src="logos/hr_menu2.png">
+						<img class="h3menu2__hr  hr--purple" src="logos/hr_menu2.png" alt="frise">
 						<span class="h3menu2__underline">Plaisir des papilles</span>
-						<img class="h3menu2__hr hr--purple hr--reverse" src="logos/hr_menu2.png">
+						<img class="h3menu2__hr hr--purple hr--reverse" src="logos/hr_menu2.png" alt="frise">
 					</h3>
 					<div  class="blocmenu2">
 						<div class="blocmenu2__plat">
@@ -88,9 +97,9 @@
 			<section>
 				<div class="color3">
 					<h3 class="h3menu2">
-						<img class="h3menu2__hr hr--blue" src="logos/hr_menu2.png">
+						<img class="h3menu2__hr hr--blue" src="logos/hr_menu2.png" alt="frise">
 						<span class="h3menu2__underline">Gourmandises sucrées</span>
-						<img class="h3menu2__hr hr--blue hr--reverse" src="logos/hr_menu2.png">
+						<img class="h3menu2__hr hr--blue hr--reverse" src="logos/hr_menu2.png" alt="frise">
 					</h3>
 					<div  class="blocmenu2">
 						<div class="blocmenu2__plat">
