--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			</section>
 			<section>
 				<div class="avenir">
-					<h3>Prochainement<span class="dots">..</span></h3>
+					<h3>Prochainement<span class="dots"></span></h3>
 				</div>
 			</section>
 		</main>
