--- a/mentions.html
+++ b/mentions.html
@@ -15,6 +15,7 @@
 		<meta name="msapplication-config" content="favicon/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
 		<link rel="stylesheet" href="css/stylesheet_mentions.css" />
+		<link rel="stylesheet" href="css/header_footer.css" />
 	</head>
 	<body>
 		<header>
