--- a/menu2.html
+++ b/menu2.html
@@ -15,6 +15,7 @@
 		<meta name="theme-color" content="#ffffff">
 		<script src="https://kit.fontawesome.com/ca10b81a1f.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="css/stylesheet_menu2.css" />
+		<link rel="stylesheet" href="css/header_footer.css" />
 	</head>
 	<body>
 		<header>
